# template-rs

./: .gitignore  .pre-commit-config.yaml  README.md  justfile
.github/workflows/: template_values.toml
template/: .gitignore  Cargo.toml  README.md  cargo-generate.toml  justfile
template/src/: main.rs
template/src/components/: calculator.rs
template/src/utils/: exceptions.rs  extra.rs  mod.rs
template/tests/: integration_tests.rs
