[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
rust-version = "1.56.0"
description = ""
# documentation = ""
# homepage = ""
repository = ""{% if license == "mit" %}
license = "MIT"{% endif %}{% if license == "apache" %}
license = "Apache-2.0"{% endif %}{% if license == "both" %}
license = "MIT OR Apache-2.0"{% endif %}{% if license == "none" %}
license = ""{% endif %}
keywords = ["{{project-name}}"]
# categories = []

publish = false # no accidents while in dev

[features]
default = []
full = []

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", default-features = false, features = ["serde_derive"] }
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
log = "0.4"
libc = "0.2"
once_cell = "1"
color-eyre = "0.6"
directories = "5.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
better-panic = "0.3"
pretty_assertions = "1"
strip-ansi-escapes = "0.2.0"

[package.metadata.cargo-udeps.ignore]
development = ["criterion", "pretty_assertions", "serde"]
normal = ["criterion", "pretty_assertions", "serde"]

[package.metadata.playground]
features = ["full"]

[profile.release]
codegen-units = 1
incremental = false

